@@ -3,16 +3,13 @@ package com.gentics.mesh.core.tagfamily;
 import static com.gentics.mesh.assertj.MeshAssertions.assertThat;
 import static com.gentics.mesh.test.TestSize.FULL;
 
-import java.util.Iterator;
-
 import org.junit.Test;
 
 import com.gentics.mesh.context.BulkActionContext;
-import com.gentics.mesh.core.data.Tag;
 import com.gentics.mesh.core.data.TagFamily;
-import com.gentics.mesh.core.data.impl.TagImpl;
 import com.gentics.mesh.test.context.AbstractMeshTest;
 import com.gentics.mesh.test.context.MeshTestSetting;
+import com.gentics.mesh.test.util.TestUtils;
 import com.syncleus.ferma.tx.Tx;
 
 @MeshTestSetting(useElasticsearch = false, testSize = FULL, startServer = false)
@@ -20,20 +17,21 @@ public class TagFamilyTest extends AbstractMeshTest {
 
 	@Test
 	public void testDelete() {
-		TagFamily t = tagFamily("colors");
-		int nTags = tx(() -> t.findAll().size());
-
+		TagFamily tagFamily = tagFamily("colors");
+		Long nTags = tx(() -> TestUtils.size(tagFamily.findAllIt()));
+		int nExtraTags = 100;
 		try (Tx tx = tx()) {
-			for (int i = 0; i < 200; i++) {
-				t.create("green" + i, project(), user());
+			for (int i = 0; i < nExtraTags; i++) {
+				tagFamily.create("green" + i, project(), user());
 			}
 			tx.success();
 		}
 		try (Tx tx = tx()) {
 			BulkActionContext bac = createBulkContext();
-			t.delete(bac);
+			tagFamily.delete(bac);
 			bac.process(true);
+			tx.success();
 		}
-		assertThat(trackingSearchProvider()).recordedDeleteEvents(nTags + 200 + 1);
+		assertThat(trackingSearchProvider()).recordedDeleteEvents(nExtraTags + nTags.intValue() +  1);
 	}
 }
